--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.8.1",
     "mysql2-db": "0.0.4",
     "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "xml2js": "^0.4.19"
   }
 }
